welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if(getX==Xmax && getY=Ymax) {
                      ^ColumnByColumn:14: error: value unary_! is not a member of Unit
while (!posFinale) {
       ^